fix word wrapping in song titles

--- a/app/assets/stylesheets/music_player.scss
+++ b/app/assets/stylesheets/music_player.scss
@@ -114,27 +114,27 @@ div[class^='progress-bar-time'] span {
 
 .volume-slider-box {
   position: absolute;
-  bottom: 39px;
-  height: 100px;
+  bottom: 40px;
+  height: 110px;
   width: 24px;
   border: 1px solid #cecece;
   background: #f2f2f2;
   box-shadow: 0 3px 4px -1px rgba(0,0,0,.1);
-  display: none;
+  // display: none;
 }
 
 div[class^="volume-slider-box-pointer"] {
   position:absolute;
   width: 0;
   height: 0;
-  display: none;
+  // display: none;
   box-sizing:border-box;
   transform: rotate(-45deg);
 }
 
 .volume-slider-box-pointer-outline {
   margin-left: 8px;
-  bottom: 35px;
+  bottom: 36px;
   border: 5px solid #ccc;
   border-color: transparent transparent #ccc #ccc;
   box-shadow: -3px 3px 4px rgba(0,0,0,.1);
@@ -142,7 +142,7 @@ div[class^="volume-slider-box-pointer"] {
 
 .volume-slider-box-pointer-fill {
   margin-left: 9px;
-  bottom: 37px;
+  bottom: 38px;
   border: 4px solid #f2f2f2;
   border-color: transparent transparent #f2f2f2 #f2f2f2;
 }
@@ -150,9 +150,9 @@ div[class^="volume-slider-box-pointer"] {
 .volume-slider {
   height: 92px;
   width: 2px;
-  margin-left: 11px;
+  margin: 10px 0 0 11px;
   background: #ccc;
-  display: none;
+  // display: none;
 }
 
 .expanded-volume {
